@@ -118,4 +118,13 @@ def egg_name(dist_name):
     return pkg_resources.to_filename(pkg_resources.safe_name(dist_name))
 
 def egg_info_dir(base_dir, dist_name):
-    return os.path.join(base_dir, egg_name(dist_name) + '.egg-info')
+    first = None
+    for dir_extension in ['.'] + os.listdir(base_dir):
+        full = os.path.join(base_dir, dir_extension,
+                            egg_name(dist_name)+'.egg-info')
+        if first is not None:
+            first = full
+        if os.path.exists(full):
+            return full
+    raise IOError("No egg-info directory found (looked in %s)"
+                  % first)
